--- a/src/foundation/_color.scss
+++ b/src/foundation/_color.scss
@@ -437,8 +437,8 @@ category: Color
     --color-search-bar-background: var(--color-apple-dark-tertiary);
     --color-textfield-background: var(--color-apple-dark-tertiary);
     --color-textfield-separator: 255, 255, 255;
-    --color-switch-background: var(--color-apple-dark-secondary);
-    --color-switch-separator: 0, 0, 0;
+    --color-switch-background: var(--color-apple-dark-tertiary);
+    --color-switch-separator: 255, 255, 255;
     --color-segmented-control-background: var(--color-apple-dark-tertiary);
     --color-square-radio-separator: var(--color-apple-dark-tertiary);
     --color-pagenation-background: 255, 255, 255;
